--- a/nova-cobranca-web/pom.xml
+++ b/nova-cobranca-web/pom.xml
@@ -105,6 +105,14 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<!-- API de Servlet -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
