JavaBeans do arquivo de retorno

--- a/nova-cobranca-web/pom.xml
+++ b/nova-cobranca-web/pom.xml
@@ -113,6 +113,19 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Texgit para arquivo de retorno -->
+		<dependency>
+			<groupId>org.jrimum</groupId>
+			<artifactId>jrimum-texgit</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
+			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jrimum</groupId>
+					<artifactId>jrimum-utilix</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 
 	<repositories>
