--- a/nova-cobranca-web/pom.xml
+++ b/nova-cobranca-web/pom.xml
@@ -126,6 +126,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+
+		<!-- Commons I/O -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<repositories>
